Primaire doel zodat je de paginas kan aflezen en kleur omgeving toegepast.
Detailpagina gemaakt
Overzichtpagina gemaakt
Database gemaakt

Webapplicatie maakt nu connectie met database
Webapplicatie pas data toe
Models voor SportEvent gemaakt
Redirect naar de overzichtpagina bij opstarten
Standaard navigatie aangepast

--- a/Pr1Lj2St1Fontys_webapp/wwwroot/css/site.css
+++ b/Pr1Lj2St1Fontys_webapp/wwwroot/css/site.css
@@ -1,22 +1,74 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
+
+
+/*Below you canvas find small custom css form my project
+*/
+.navbar {
+    background-color: #6B8E23;
+    color: white;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 15px;
+    padding: 20px;
+}
+
+.event-card {
+    background-color: #6B8E23;
+    color: white;
+    padding: 15px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* This pushes the button to the bottom */
+    height: 100%; /* Allow the card to grow with content */
+}
+
+
+
+h1 {
+    color: white;
+}
+
+.btn-details {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 8px 12px;
+    background-color: #FFD700;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+body {
+    background: #A4B465;
+}
+    .btn-details:hover {
+        background-color: #FF6347; /* Light red */
+        color: white;
+    }
