--- a/Pr1Lj2St1Fontys_webapp/Pages/Privacy.cshtml
+++ b/Pr1Lj2St1Fontys_webapp/Pages/Privacy.cshtml
@@ -1,8 +1,15 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Privacybeleid";
 }
+
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Dit sportplatform respecteert de privacy van alle bezoekers. Er worden geen persoonlijke gegevens verzameld of opgeslagen.
+    De informatie op deze website is uitsluitend bedoeld om sportevenementen weer te geven.
+	Indien dit aanbod komt met toekomstige wijzigingen, zal dit privacybeleid worden bijgewerkt.
+</p>
+
+
