--- a/Pr1Lj2St1Fontys_webapp/Pages/Overzicht.cshtml
+++ b/Pr1Lj2St1Fontys_webapp/Pages/Overzicht.cshtml
@@ -20,8 +20,10 @@
     {
         <div class="event-card">
             <h2>@item.Activiteit</h2>
-            <p><strong>Datum & tijd:</strong> @item.StartDatumTijd</p>
-            <p><strong>Locatie:</strong> @item.Locatie</p>
+            <h5><strong>Datum & tijd:</strong> </h5>
+            <p>@item.StartDatumTijd</p>
+            <h5><strong>Locatie:</strong> </h5>
+            <p>@item.Locatie</p>
             <a class="btn-details" href="/Detail?id=@item.EventID">Meer info</a>
         </div>
     }
