--- a/Pr1Lj2St1Fontys_webapp/Pages/Shared/_Layout.cshtml
+++ b/Pr1Lj2St1Fontys_webapp/Pages/Shared/_Layout.cshtml
@@ -12,8 +12,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm  box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Sportevenementen</a> <!-- Gewijzigde naam -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Sportevenementen</a>
+                <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
