Updated database talking for overzichtpage
Now it will only get the data it needs. Since we open connection here, talk to database we only want to receive the data we want instead of all data, order it to startdate now, store them in a list of the Eventmodel object

--- a/Pr1Lj2St1Fontys_webapp/Pages/Overzicht.cshtml
+++ b/Pr1Lj2St1Fontys_webapp/Pages/Overzicht.cshtml
@@ -14,9 +14,7 @@
 </div>
 
 <div class="grid-container">
-    @foreach (var item in Model.Evenementen
-			.Where(e => e.StartDatumTijd > DateTime.Now) // Only show future events
-			.OrderBy(e => e.StartDatumTijd)) // Sort by date ascending, oldest first
+    @foreach (var item in Model.Evenementen)
     {
         <div class="event-card">
             <h2>@item.Activiteit</h2>
