--- a/Pr1Lj2St1Fontys_webapp/Pages/Detail.cshtml
+++ b/Pr1Lj2St1Fontys_webapp/Pages/Detail.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Event Detail";
 }
 
-<div class="container mt-5">
+<div class="container content-animation mt-5">
 
     <div class="event-details">
         <div class="text-content">
